// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Detail/> asPanel 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    Details
  </div>
  <div
    className="panel-body"
  >
    <div>
      <table
        className="table table-responsive table-condensed detail-component--table__fixed"
      >
        <tbody>
          <tr>
            <td>
              <span
                title="Flag"
              >
                Flag
              </span>
            </td>
            <td
              className="text__wrap"
              data-caption="Flag"
              data-fieldkey="flag"
            >
              <span
                className="detail-display"
              >
                
              </span>
            </td>
          </tr>
          <tr>
            <td>
              <span
                title="for set 3"
              >
                For set 3
              </span>
            </td>
            <td
              className="text__wrap"
              data-caption="For set 3"
              data-fieldkey="for set 3"
            >
              <span
                className="detail-display"
              >
                abc
              </span>
            </td>
          </tr>
          <tr>
            <td>
              <span
                title="again for set 3"
              >
                Again for set 3
              </span>
            </td>
            <td
              className="text__wrap"
              data-caption="Again for set 3"
              data-fieldkey="again for set 3"
            >
              <span
                className="detail-display"
              >
                false
              </span>
            </td>
          </tr>
          <tr>
            <td>
              <span
                title="another"
              >
                Another
              </span>
            </td>
            <td
              className="text__wrap"
              data-caption="Another"
              data-fieldkey="another"
            >
              <span
                className="detail-display"
              >
                test test
              </span>
            </td>
          </tr>
          <tr>
            <td>
              <span
                title="lookupfield"
              >
                Lookup Field Caption
              </span>
            </td>
            <td
              className="text__wrap"
              data-caption="Lookup Field Caption"
              data-fieldkey="lookupfield"
            >
              <a
                href="/labkey/Sample%20Management%202/list-details.view?listId=1&pk=test2"
              >
                test2
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`<Detail/> loading 1`] = `
<span
  className=""
>
  <i
    aria-hidden="true"
    className="fa fa-spinner fa-pulse"
  />
   
  Loading...
</span>
`;

exports[`<Detail/> with QueryGridModel 1`] = `
<div>
  <table
    className="table table-responsive table-condensed detail-component--table__fixed"
  >
    <tbody>
      <tr>
        <td>
          <span
            title="Flag"
          >
            Flag
          </span>
        </td>
        <td
          className="text__wrap"
          data-caption="Flag"
          data-fieldkey="flag"
        >
          <span
            className="detail-display"
          >
            
          </span>
        </td>
      </tr>
      <tr>
        <td>
          <span
            title="for set 3"
          >
            For set 3
          </span>
        </td>
        <td
          className="text__wrap"
          data-caption="For set 3"
          data-fieldkey="for set 3"
        >
          <span
            className="detail-display"
          >
            abc
          </span>
        </td>
      </tr>
      <tr>
        <td>
          <span
            title="again for set 3"
          >
            Again for set 3
          </span>
        </td>
        <td
          className="text__wrap"
          data-caption="Again for set 3"
          data-fieldkey="again for set 3"
        >
          <span
            className="detail-display"
          >
            false
          </span>
        </td>
      </tr>
      <tr>
        <td>
          <span
            title="another"
          >
            Another
          </span>
        </td>
        <td
          className="text__wrap"
          data-caption="Another"
          data-fieldkey="another"
        >
          <span
            className="detail-display"
          >
            test test
          </span>
        </td>
      </tr>
      <tr>
        <td>
          <span
            title="lookupfield"
          >
            Lookup Field Caption
          </span>
        </td>
        <td
          className="text__wrap"
          data-caption="Lookup Field Caption"
          data-fieldkey="lookupfield"
        >
          <a
            href="/labkey/Sample%20Management%202/list-details.view?listId=1&pk=test2"
          >
            test2
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
